
[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.5.1]]
==== 4.5.1

[float]
===== Changed

- Update elasticsearch spy to use new transport gem name {pull}1257[#1257]

===== Fixed

- Fixed dependencies to allow CI to build successfully {pull}1259[#1259]
- Fixed warnings related to TimeTask timeouts {pull}1255[#1255]

[[release-notes-4.5.0]]
==== 4.5.0

[float]
===== Changed

- Stop collecting the field `http.request.socket.encrypted` {pull}1181[#1181]

[float]
===== Fixed

- Fixed MongoDB spy thread safety {pull}1202[#1202]
- Fixed span context fields for DynamoDB instrumentation {pull}1178[#1178]
- Fixed span context fields for S3 instrumentation {pull}1179[#1179]
- Update user agent info to match spec {pull}1182[#1182]

[[release-notes-4.4.0]]
==== 4.4.0

[float]
===== Added
- Optional span to be ended instead of current span {pull}1039[#1039]
- Config option `log_ecs_formatting` {pull}1053[#1053]

[float]
===== Fixed
- Fixed detecting Linux on Alpine for CPU/MEM metrics {pull}1057[#1057]

[[release-notes-4.3.0]]
==== 4.3.0

[float]
===== Added

- Add JVM memory metrics {pull}1040[#1040]

[[release-notes-4.2.0]]
==== 4.2.0

[float]
===== Added

- Add support for AWS Storage Table/CosmosDB {pull}999[#999]

[float]
===== Fixed

- Align HTTP span types/subtypes with spec {pull}1014[#1014]
- Passing a full URL as a path to `Net::HTTP` {pull}1029[#1029]
- Fix growing number of open file descriptors {pull}1033[#1033]

[[release-notes-4.1.0]]
==== 4.1.0

[float]
===== Added

- Azure App Services instance metadata {pull}1007[#1007]

[float]
===== Changed

- `hostname` is now reported split by `configured_hostname` and `detected_hostname` {pull}1009[#1009]

[float]
===== Fixed